translated page to spanish

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -7,54 +7,51 @@
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <!--Header-->
     <header>
-      <!--Navigation Menu-->
+      <!--Menú de navegación-->
       <div class="navigation">
-        <a href="/MasterD-Website-Project-1/index.html">Home</a>
+        <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
         <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html"
-          >Contact</a
+          >Contacto</a
         >
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
-        <a href="/MasterD-Website-Project-1/HTML/quote.html">Quote</a>
+        <a href="/MasterD-Website-Project-1/HTML/quote.html">Presupusto</a>
       </div>
     </header>
-
-    <!--Contact Page-->
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
-        <h3><em>Premium Clothes</em></h3>
+        <h3><em>Ropa de primera calidad</em></h3>
       </div>
-      <!--Map-->
-      <h1>How to find us</h1>
+      <!--Mapa-->
+      <h1>Cómo encontrarnos</h1>
         <div class="map">
-            <img src="/MasterD-Website-Project-1/Images/map1.png" alt="map of store location">
+            <img src="/MasterD-Website-Project-1/Images/map1.png" alt="Mapa de ubicación de la tienda">
         </div>
-        <!--Company Details-->
-        <p><b>Company name:</b></p>
-        <p>Urban Lifestyle S.L</p><br>
+        <!--Datos de la empresa-->
+        <p><b>Nombre de empresa:</b></p>
+        <p>Urban Lifestyle Ropa S.L</p><br>
         <p><b>CIF:</b></p>
         <p>B444000224</p><br>
-        <p><b>Registered adress</b></p>
+        <p><b>Dirección</b></p>
         <p>Calle de Prim 6, 28004 Madrid, España</p><br>
-        <p><b>Contact information</b></p>
+        <p><b>Información del contacto</b></p>
         <ul>
-          <li>Telephone: 90950392</li>
-          <li>Email: contact@urbanlifestyle.com</li>
+          <li>Teléfono: 90950392</li>
+          <li>Correo electrónico: contacto@urbanlifestyle.com</li>
         </ul><br>
-        <p><b>Business Activity:</b></p>
-        <p>Clothing sales</p><br>
-        <p><b>Legal Form:</b></p>
+        <p><b>Actividad empresarial:</b></p>
+        <p>Venta de ropa</p><br>
+        <p><b>Forma legal:</b></p>
         <p>Sociedad Limitada</p><br>
     </main>
-    <!--Footer-->
+    <!--Elementos del pie de página-->
       <div class="footer">
-      <!--Adress and legal notice-->
+      <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
-      <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
+      <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
       </div>
-       <!--Social Networks-->
+       <!--Redes sociales-->
       <div class="social">
         <a href="https://www.facebook.com">
         <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
@@ -66,10 +63,10 @@
         <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
-      <!--Logo-->
+      <!--Logotipo de pie de página-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo">
+      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
       </div>
   </body>
 </html>
