--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -7,9 +7,8 @@
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <!--Header-->
     <header>
-      <!--Navigation Menu-->
+      <!--Menú de navegación-->
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
         <a href="/MasterD-Website-Project-1/HTML/contacto.html">Contacto</a>
@@ -19,80 +18,79 @@
         <a href="/MasterD-Website-Project-1/HTML/presupuesto.html">Presupuesto</a>
       </div>
     </header>
-    <!--Portfolio Page-->
     <main class="main">
     <div class="mainheader">
         <h1>Urban Lifestyle</h1>
-        <h3><em>Premium Clothes</em></h3>
+        <h3><em>Ropa de primera calidad</em></h3>
       </div>
-      <p>Welcome to Urban Lifestyle, where fashion meets the heartbeat of the city. Our collection captures the essence of modern streetwear; bold, trendy, and unapologetically authentic. From standout tees to sleek essentials, we design clothing that speaks to your vibe and empowers your style. Step into the urban flow and make your mark with Urban Lifestyle</p>
-      <!--Image Gallery-->
+      <p>Bienvenido a Urban Lifestyle, donde la moda se encuentra con el corazón de la ciudad. Nuestra colección captura la esencia de la moda urbana moderna: audaz, moderna y auténtica. Desde camisetas llamativas hasta prendas básicas elegantes, diseñamos prendas que reflejan tu estilo y potencian tu personalidad. Súmate al flujo urbano y deja tu huella con Urban Lifestyle</p>
+      <!--Galería de imágenes-->
     <div class="clothes">
       <h1>Pants</h1>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="blue pants orange background">
-          <div class="description">Hector style pants</div>
+          <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="pantalón azul fondo naranja">
+          <div class="description">Pantalones estilo Hector</div>
         </div>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants2.jpg" alt="ripped jeans pants">
-          <div class="description">Brucci jeans</div>
+          <img src="/MasterD-Website-Project-1/Images/pants2.jpg" alt="pantalones vaqueros rotos">
+          <div class="description">Vaqueros Brucci</div>
         </div>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants3.jpg" alt="short cut pants">
-          <div class="description">Matoni short cut pants</div>
+          <img src="/MasterD-Website-Project-1/Images/pants3.jpg" alt="pantalones cortos">
+          <div class="description">Pantalones cortos Matoni</div>
         </div>
         <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="pants with frills">
-          <div class="description">Mayamo Frill Pants</div>
+          <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="pantalones con volantes">
+          <div class="description">Pantalones con volantes Mayamo</div>
         </div>
 
       <h1>T-shirts</h1>
         <div class="tshirts">
-            <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="black t shirt rock and roll">
-            <div class="description">Matoni T-shirt custom sized</div>
+            <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="camiseta negra rock and roll">
+            <div class="description">Camiseta Matoni talla personalizada</div>
         </div>
         <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="black t shirt city background">
-          <div class="description">Brucci T-shirt custom sized</div>
-        </div>
-
-        <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="psychadelic t shirt">
-          <div class="description">Milano T-shirt custom sized</div>
+          <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="Camiseta negra fondo ciudad">
+          <div class="description">Camiseta Brucci talla personalizada</div>
         </div>
 
         <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="play hard t shirt">
-          <div class="description">France T-shirt custom sized</div>
+          <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="camiseta psicodélica">
+          <div class="description">Camiseta Milano talla personalizada</div>
+        </div>
+
+        <div class="tshirts">
+          <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="camiseta juega duro">
+          <div class="description">Camiseta Francia talla personalizada</div>
         </div>
 
       <h1>Shoes</h1>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes1.jpg" alt="black converse on prosthethic legs">
+        <img src="/MasterD-Website-Project-1/Images/shoes1.jpg" alt="Converse negras con prótesis de pierna">
         <div class="description">Converse</div>      
       </div>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes2.jpg" alt="white tennis shoes">
-        <div class="description">Tennis</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes2.jpg" alt="zapatillas de tenis blancas">
+        <div class="description">Tenis</div>      
       </div>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes3.jpg" alt="black leather shoes">
-        <div class="description">Black leather rock</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes3.jpg" alt="zapatos de cuero negro">
+        <div class="description">Roca de cuero negro</div>      
       </div>
       <div class="shoes">   
-        <img src="/MasterD-Website-Project-1/Images/shoes4.jpg" alt="black boots ankle height">
-        <div class="description">Cutie boots</div>      
+        <img src="/MasterD-Website-Project-1/Images/shoes4.jpg" alt="botas negras hasta el tobillo">
+        <div class="description">Botas lindas</div>      
       </div>
     </div>
     </main>
 
-    <!--Footer-->
+    <!--Elementos del pie de página-->
       <div class="footer">
-      <!--Adress and legal notice-->
+      <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
-      <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
+      <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
       </div>
-       <!--Social Networks-->
+       <!--Redes sociales-->
       <div class="social">
         <a href="https://www.facebook.com">
         <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
@@ -104,10 +102,10 @@
         <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
-      <!--Logo-->
+      <!--Logotipo de pie de página-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo">
+      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
       </div>
   </body>
 </html>
