--- a/HTML/presupuesto.html
+++ b/HTML/presupuesto.html
@@ -7,49 +7,48 @@
     <title>Urban Lifestyle</title>
   </head>
   <body>
-    <!--Header-->
     <header>
-      <!--Navigation Menu-->
+      <!--Menú de navegación-->
       <div class="navigation">
-        <a href="/MasterD-Website-Project-1/index.html">Home</a>
-        <a href="/MasterD-Website-Project-1/HTML/contact.html">Contact</a>
+        <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
+        <a href="/MasterD-Website-Project-1/HTML/contact.html">Contacto</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
         <a class="active" href="/MasterD-Website-Project-1/HTML/quote.html"
-          >Quote</a
+          >Presupuesto</a
         >
       </div>
     </header>
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
-        <h3><em>Premium Clothes</em></h3>
+        <h3><em>Ropa de primera calidad</em></h3>
       </div>
-      <!--Data entry-->
+      <!--Entrada de datos-->
       <form>
-        <label for="fullname">Full name:</label>
+        <label for="fullname">Nombre completo:</label>
         <input type="text" id="fullname" name="fullname"><br>
-        <label for="email">Email:</label>
+        <label for="email">Correo electrónico:</label>
         <input type="email" id="email" name="email"><br>
-        <label for="telephone">Telephone:</label>
+        <label for="telephone">Teléfono:</label>
         <input type="tel" id="telephone" name="telephone"><br>
-        <label for="information">Request more information:</label><br>
+        <label for="information">Solicitar más información:</label><br>
         <textarea id="information" name="information" rows="5" cols="50"></textarea><br>
         <input type="checkbox" id="privacypolicy" name="privacypolicy" value="accept" required>
-        <label for="privacypolicy">I accept the terms and privacy policy</label>
-        <button type="submit">Submit</button><br>
+        <label for="privacypolicy">Acepto los términos y política de privacidad</label>
+        <button type="submit">Entregar</button><br>
 
       </form>
-      <!--Privacy Policy-->
-      <br><p>Your privacy is important to us. Any information provided through our form, such as your name, email address, or other details, will only be used to process your request and provide you with an accurate quote. We will not share your information with third parties without your consent. All data is handled securely and in compliance with applicable privacy regulations. If you have any questions or concerns about how your information is used, feel free to contact us.</p>
+      <!--Política de privacidad-->
+      <br><p>Su privacidad es importante para nosotros. Cualquier información proporcionada a través de nuestro formulario, como su nombre, dirección de correo electrónico u otros detalles, solo se utilizará para procesar su solicitud y brindarle una cotización precisa. No compartiremos su información con terceros sin su consentimiento. Todos los datos se manejan de forma segura y de conformidad con las regulaciones de privacidad aplicables. Si tiene alguna pregunta o inquietud sobre cómo se utiliza su información, no dude en comunicarse con nosotros.</p>
     </main>
 
-    <!--Footer-->
+    <!--Elementos del pie de página-->
       <div class="footer">
-      <!--Adress and legal notice-->
+      <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
-      <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
+      <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
       </div>
-       <!--Social Networks-->
+       <!--Redes sociales-->
       <div class="social">
         <a href="https://www.facebook.com">
         <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
@@ -61,10 +60,10 @@
         <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
-      <!--Logo-->
+      <!--Logotipo de pie de página-->
       <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="company logo">
+      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
       </div>
   </body>
 </html>
