--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <!--Navigation Menu-->
+      <!--Menú de navegación-->
       <div class="navigation">
         <a class="active" href="/MasterD-Website-Project-1/index.html">Inicio</a>
         <a href="/MasterD-Website-Project-1/HTML/contacto.html">Contacto</a>
@@ -19,64 +19,59 @@
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
-        <h3><em>Premium Clothes</em></h3>
+        <h3><em>Ropa de primera calidad</em></h3>
       </div>
       <p>
-        Welcome to Urban Lifestyle Clothing, the home of the freshest apparel.
-        We are all about bold designs, effortless comfort, and a vibe that
-        speaks to the heart of the city. From everyday staples to standout
-        pieces, our collections are designed to move with you. Explore the site,
-        and find your next look that is as dynamic as you are.
+        Bienvenido a Urban Lifestyle Clothing, el hogar de la ropa más novedosa.
+        Nos centramos en diseños audaces, comodidad sencilla y un estilo que
+        habla al corazón de la ciudad. Desde prendas básicas para todos los días hasta
+        piezas destacadas, nuestras colecciones están diseñadas para moverse contigo. Explora el sitio
+        y encuentra tu próximo estilo que sea tan dinámico como tú.
       </p>
 
-      <!--Contact block-->
+      <!--Bloque de contacto-->
       <div class="categorypicture">
-        <img src="Images/contact_urban.jpg" alt="contact">
+        <img src="Images/contact_urban.jpg" alt="contacto">
       </div>
       <p>
-        Have questions, or ready to start your next project? We would love to
-        hear from you! Whether you need more information or are looking to
-        collaborate, our team is here to help. Fill out the contact form, or
-        reach out to us directly via email or phone. Let us create something
-        amazing together.
+        ¿Tienes preguntas o estás listo para comenzar tu próximo proyecto? ¡Nos encantaría saber de ti! Si necesitas más información o estás buscando
+        colaborar, nuestro equipo está aquí para ayudarte. Completa el formulario de contacto o
+        comunícate con nosotros directamente por correo electrónico o teléfono. Creemos algo
+        increíble juntos.
       </p>
-      <a href="HTML/contacto.html" class="button">Contact us</a>
+      <a href="HTML/contacto.html" class="button">Contacta con nosotros</a>
 
-      <!--Portfolio block-->
+      <!--Bloque de portfolio-->
       <div class="categorypicture">
         <img src="Images/portfolio_urban.jpg" alt="portfolio">
       </div>
       <p>
-        Explore our catalogue to see the heart of what we do. From the latest
-        winter fashhions to christmas apparel, each product reflects our
-        commitment to creativity and quality.
+        Explora nuestro catálogo para conocer el corazón de lo que hacemos. Desde las últimas modas de invierno hasta prendas navideñas, cada producto refleja nuestro compromiso con la creatividad y la calidad.
       </p>
       <a href="/MasterD-Website-Project-1/HTML/portfolio.html" class="button"
-        >Check out the catalogue</a
-      >
+        >Consulta el catálogo</a>
 
-      <!--Quote block-->
+      <!--Bloque de presupuesto-->
       <div class="categorypicture">
-        <img src="Images/quote_urban.jpg" alt="quote">
+        <img src="Images/quote_urban.jpg" alt="presupuesto">
       </div>
       <p>
-        Ready to bring your vision to life? Request a personalized quote
-        tailored to your needs. Whether it is a t-shirt or a fifteen sweaters,
-        we will provide you with a clear and competitive estimate. Simply fill
-        out the form with your details, and we will get back to you promptly to
-        discuss the next steps.
+        ¿Está listo para darle vida a su visión? Solicite un presupuesto personalizado
+        adaptado a sus necesidades. Ya sea una camiseta o quince suéteres,
+        le proporcionaremos un presupuesto claro y competitivo. Simplemente complete
+        el formulario con sus datos y nos comunicaremos con usted a la brevedad para analizar los próximos pasos.
       </p>
       <a href="/MasterD-Website-Project-1/HTML/presupuesto.html" class="button"
-        >Get a quote</a
+        >Obtenga una cotización</a
       >
     </main>
-    <!--Footer items-->
+    <!--Elementos del pie de página-->
     <div class="footer">
-      <!--Adress and legal notice-->
+      <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
-      <p>&#169; 2025 Urban Lifestyle Clothes. All rights reserved</p>
+      <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
     </div>
-    <!--Social Networks-->
+    <!--Redes sociales-->
     <div class="social">
       <a href="https://www.facebook.com">
         <img src="Images/facebook_logo.png" alt="facebook logo">
@@ -88,10 +83,10 @@
         <img src="Images/linkedin_logo.png" alt="linkedin logo">
       </a>
     </div>
-    <!--Footer Logo-->
+    <!--Logotipo de pie de página-->
     <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="Images/urban_lifestyle_logo.png" alt="company logo">
+      <img src="Images/urban_lifestyle_logo.png" alt="logo de empresa">
     </div>
   </body>
 </html>
