--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -11,49 +11,65 @@
       <!--Menú de navegación-->
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html"
-          >Contacto</a
-        >
+        <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html">Contacto</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
         <a href="/MasterD-Website-Project-1/HTML/quote.html">Presupusto</a>
       </div>
     </header>
+
+
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
         <h3><em>Ropa de primera calidad</em></h3>
       </div>
+
+
       <!--Mapa-->
       <h1>Cómo encontrarnos</h1>
         <div class="map">
             <img src="/MasterD-Website-Project-1/Images/map1.png" alt="Mapa de ubicación de la tienda">
         </div>
-        <!--Datos de la empresa-->
-        <p><b>Nombre de empresa:</b></p>
-        <p>Urban Lifestyle Ropa S.L</p><br>
-        <p><b>CIF:</b></p>
-        <p>B444000224</p><br>
-        <p><b>Dirección</b></p>
-        <p>Calle de Prim 6, 28004 Madrid, España</p><br>
-        <p><b>Información del contacto</b></p>
-        <ul>
-          <li>Teléfono: 90950392</li>
-          <li>Correo electrónico: contacto@urbanlifestyle.com</li>
-        </ul><br>
-        <p><b>Actividad empresarial:</b></p>
-        <p>Venta de ropa</p><br>
-        <p><b>Forma legal:</b></p>
-        <p>Sociedad Limitada</p><br>
+
+
+      <!--Datos de la empresa-->
+      <p><b>Nombre de empresa:</b></p>
+      <p>Urban Lifestyle Ropa S.L</p><br>
+
+
+      <p><b>CIF:</b></p>
+      <p>B444000224</p><br>
+
+
+      <p><b>Dirección</b></p>
+      <p>Calle de Prim 6, 28004 Madrid, España</p><br>
+
+
+      <p><b>Información del contacto</b></p>
+      <ul>
+        <li>Teléfono: 90950392</li>
+        <li>Correo electrónico: contacto@urbanlifestyle.com</li>
+      </ul><br>
+
+
+      <p><b>Actividad empresarial:</b></p>
+      <p>Venta de ropa</p><br>
+
+
+      <p><b>Forma legal:</b></p>
+      <p>Sociedad Limitada</p><br>
     </main>
+
     <!--Elementos del pie de página-->
       <div class="footer">
-      <!--Dirección y aviso legal-->
-      <p>Calle de Prim 6, 28004 Madrid, España</p>
-      <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
+        <!--Dirección y aviso legal-->
+        <p>Calle de Prim 6, 28004 Madrid, España</p>
+        <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
       </div>
+
        <!--Redes sociales-->
       <div class="social">
-        <a href="https://www.facebook.com">
+      <a href="https://www.facebook.com">
         <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
       </a>
       <a href="https://www.x.com">
@@ -63,10 +79,12 @@
         <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
       </div>
+
+
       <!--Logotipo de pie de página-->
       <div class="footerlogo">
-      <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
+        <a href="/MasterD-Website-Project-1/index.html"></a>
+        <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
       </div>
   </body>
 </html>
