--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -12,57 +12,59 @@
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
         <a href="/MasterD-Website-Project-1/HTML/contacto.html">Contacto</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/portfolio.html"
-          >Portfolio</a
-        >
+        <a class="active" href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
         <a href="/MasterD-Website-Project-1/HTML/presupuesto.html">Presupuesto</a>
       </div>
     </header>
+
+
     <main class="main">
     <div class="mainheader">
         <h1>Urban Lifestyle</h1>
         <h3><em>Ropa de primera calidad</em></h3>
       </div>
       <p>Bienvenido a Urban Lifestyle, donde la moda se encuentra con el corazón de la ciudad. Nuestra colección captura la esencia de la moda urbana moderna: audaz, moderna y auténtica. Desde camisetas llamativas hasta prendas básicas elegantes, diseñamos prendas que reflejan tu estilo y potencian tu personalidad. Súmate al flujo urbano y deja tu huella con Urban Lifestyle</p>
-      <!--Galería de imágenes-->
+      
+      
+    <!--Galería de imágenes-->
     <div class="clothes">
       <h1>Pants</h1>
-        <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="pantalón azul fondo naranja">
-          <div class="description">Pantalones estilo Hector</div>
-        </div>
-        <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants2.jpg" alt="pantalones vaqueros rotos">
-          <div class="description">Vaqueros Brucci</div>
-        </div>
-        <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants3.jpg" alt="pantalones cortos">
-          <div class="description">Pantalones cortos Matoni</div>
-        </div>
-        <div class="pants">
-          <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="pantalones con volantes">
-          <div class="description">Pantalones con volantes Mayamo</div>
-        </div>
+      <div class="pants">
+        <img src="/MasterD-Website-Project-1/Images/pants1.jpg" alt="pantalón azul fondo naranja">
+        <div class="description">Pantalones estilo Hector</div>
+      </div>
+      <div class="pants">
+        <img src="/MasterD-Website-Project-1/Images/pants2.jpg" alt="pantalones vaqueros rotos">
+        <div class="description">Vaqueros Brucci</div>
+      </div>
+      <div class="pants">
+        <img src="/MasterD-Website-Project-1/Images/pants3.jpg" alt="pantalones cortos">
+        <div class="description">Pantalones cortos Matoni</div>
+      </div>
+      <div class="pants">
+        <img src="/MasterD-Website-Project-1/Images/pants4.jpg" alt="pantalones con volantes">
+        <div class="description">Pantalones con volantes Mayamo</div>
+      </div>
+
 
       <h1>T-shirts</h1>
-        <div class="tshirts">
-            <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="camiseta negra rock and roll">
-            <div class="description">Camiseta Matoni talla personalizada</div>
-        </div>
-        <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="Camiseta negra fondo ciudad">
-          <div class="description">Camiseta Brucci talla personalizada</div>
-        </div>
+      <div class="tshirts">
+        <img src="/MasterD-Website-Project-1/Images/tshirt4.jpg" alt="camiseta negra rock and roll">
+        <div class="description">Camiseta Matoni talla personalizada</div>
+      </div>
+      <div class="tshirts">
+        <img src="/MasterD-Website-Project-1/Images/tshirt1.jpg" alt="Camiseta negra fondo ciudad">
+        <div class="description">Camiseta Brucci talla personalizada</div>
+      </div>
+      <div class="tshirts">
+        <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="camiseta psicodélica">
+        <div class="description">Camiseta Milano talla personalizada</div>
+      </div>
+      <div class="tshirts">
+        <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="camiseta juega duro">
+        <div class="description">Camiseta Francia talla personalizada</div>
+      </div>
 
-        <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt2.jpg" alt="camiseta psicodélica">
-          <div class="description">Camiseta Milano talla personalizada</div>
-        </div>
-
-        <div class="tshirts">
-          <img src="/MasterD-Website-Project-1/Images/tshirt3.jpg" alt="camiseta juega duro">
-          <div class="description">Camiseta Francia talla personalizada</div>
-        </div>
 
       <h1>Shoes</h1>
       <div class="shoes">   
@@ -84,28 +86,33 @@
     </div>
     </main>
 
+
     <!--Elementos del pie de página-->
-      <div class="footer">
+    <div class="footer">
       <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
-      </div>
-       <!--Redes sociales-->
-      <div class="social">
-        <a href="https://www.facebook.com">
-        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
+    </div>
+
+
+    <!--Redes sociales-->
+    <div class="social">
+      <a href="https://www.facebook.com">
+       <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
       </a>
       <a href="https://www.x.com">
         <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo">
       </a>
       <a href="https://www.linkedin.com">
-        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
+       <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
       </a>
-      </div>
+    </div>
+
+
       <!--Logotipo de pie de página-->
       <div class="footerlogo">
-      <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
+        <a href="/MasterD-Website-Project-1/index.html"></a>
+          <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
       </div>
   </body>
 </html>
