--- a/HTML/presupuesto.html
+++ b/HTML/presupuesto.html
@@ -13,16 +13,18 @@
         <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
         <a href="/MasterD-Website-Project-1/HTML/contact.html">Contacto</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/quote.html"
-          >Presupuesto</a
-        >
+        <a class="active" href="/MasterD-Website-Project-1/HTML/quote.html">Presupuesto</a>
       </div>
     </header>
+
+
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
         <h3><em>Ropa de primera calidad</em></h3>
       </div>
+
+
       <!--Entrada de datos-->
       <form>
         <label for="fullname">Nombre completo:</label>
@@ -36,34 +38,38 @@
         <input type="checkbox" id="privacypolicy" name="privacypolicy" value="accept" required>
         <label for="privacypolicy">Acepto los términos y política de privacidad</label>
         <button type="submit">Entregar</button><br>
-
       </form>
       <!--Política de privacidad-->
-      <br><p>Su privacidad es importante para nosotros. Cualquier información proporcionada a través de nuestro formulario, como su nombre, dirección de correo electrónico u otros detalles, solo se utilizará para procesar su solicitud y brindarle una cotización precisa. No compartiremos su información con terceros sin su consentimiento. Todos los datos se manejan de forma segura y de conformidad con las regulaciones de privacidad aplicables. Si tiene alguna pregunta o inquietud sobre cómo se utiliza su información, no dude en comunicarse con nosotros.</p>
+      <br>
+      <p>Su privacidad es importante para nosotros. Cualquier información proporcionada a través de nuestro formulario, como su nombre, dirección de correo electrónico u otros detalles, solo se utilizará para procesar su solicitud y brindarle una cotización precisa. No compartiremos su información con terceros sin su consentimiento. Todos los datos se manejan de forma segura y de conformidad con las regulaciones de privacidad aplicables. Si tiene alguna pregunta o inquietud sobre cómo se utiliza su información, no dude en comunicarse con nosotros.</p>
     </main>
 
     <!--Elementos del pie de página-->
-      <div class="footer">
+    <div class="footer">
       <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
       </div>
-       <!--Redes sociales-->
+
+
+    <!--Redes sociales-->
       <div class="social">
         <a href="https://www.facebook.com">
-        <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
-      </a>
-      <a href="https://www.x.com">
-        <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo">
-      </a>
-      <a href="https://www.linkedin.com">
-        <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
-      </a>
+          <img src="/MasterD-Website-Project-1/Images/facebook_logo.png" alt="facebook logo">
+        </a>
+        <a href="https://www.x.com">
+          <img src="/MasterD-Website-Project-1/Images/twitter_logo.png" alt="twitter logo">
+        </a>
+        <a href="https://www.linkedin.com">
+          <img src="/MasterD-Website-Project-1/Images/linkedin_logo.png" alt="linkedin logo">
+        </a>
       </div>
-      <!--Logotipo de pie de página-->
-      <div class="footerlogo">
+
+
+    <!--Logotipo de pie de página-->
+    <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
-      <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
-      </div>
+        <img src="/MasterD-Website-Project-1/Images/urban_lifestyle_logo.png" alt="logo de empresa">
+    </div>
   </body>
 </html>
