--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="/MasterD-Website-Project-1/HTML/presupuesto.html">Presupuesto</a>
       </div>
     </header>
+
+    
     <main class="main">
       <div class="mainheader">
         <h1>Urban Lifestyle</h1>
@@ -29,6 +31,7 @@
         y encuentra tu próximo estilo que sea tan dinámico como tú.
       </p>
 
+
       <!--Bloque de contacto-->
       <div class="categorypicture">
         <img src="Images/contact_urban.jpg" alt="contacto">
@@ -41,6 +44,7 @@
       </p>
       <a href="HTML/contacto.html" class="button">Contacta con nosotros</a>
 
+
       <!--Bloque de portfolio-->
       <div class="categorypicture">
         <img src="Images/portfolio_urban.jpg" alt="portfolio">
@@ -48,8 +52,8 @@
       <p>
         Explora nuestro catálogo para conocer el corazón de lo que hacemos. Desde las últimas modas de invierno hasta prendas navideñas, cada producto refleja nuestro compromiso con la creatividad y la calidad.
       </p>
-      <a href="/MasterD-Website-Project-1/HTML/portfolio.html" class="button"
-        >Consulta el catálogo</a>
+      <a href="/MasterD-Website-Project-1/HTML/portfolio.html" class="button">Consulta el catálogo</a>
+
 
       <!--Bloque de presupuesto-->
       <div class="categorypicture">
@@ -62,15 +66,18 @@
         el formulario con sus datos y nos comunicaremos con usted a la brevedad para analizar los próximos pasos.
       </p>
       <a href="/MasterD-Website-Project-1/HTML/presupuesto.html" class="button"
-        >Obtenga una cotización</a
-      >
+        >Obtenga una cotización</a>
     </main>
+
+
     <!--Elementos del pie de página-->
     <div class="footer">
       <!--Dirección y aviso legal-->
       <p>Calle de Prim 6, 28004 Madrid, España</p>
       <p>&#169; 2025 Urban Lifestyle Ropa. Reservados todos los derechos</p>
     </div>
+
+
     <!--Redes sociales-->
     <div class="social">
       <a href="https://www.facebook.com">
@@ -83,6 +90,8 @@
         <img src="Images/linkedin_logo.png" alt="linkedin logo">
       </a>
     </div>
+
+
     <!--Logotipo de pie de página-->
     <div class="footerlogo">
       <a href="/MasterD-Website-Project-1/index.html"></a>
