--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -11,9 +11,9 @@
       <!--Menú de navegación-->
       <div class="navigation">
         <a href="/MasterD-Website-Project-1/index.html">Inicio</a>
-        <a class="active" href="/MasterD-Website-Project-1/HTML/contact.html">Contacto</a>
+        <a class="active" href="/MasterD-Website-Project-1/HTML/contacto.html">Contacto</a>
         <a href="/MasterD-Website-Project-1/HTML/portfolio.html">Portfolio</a>
-        <a href="/MasterD-Website-Project-1/HTML/quote.html">Presupusto</a>
+        <a href="/MasterD-Website-Project-1/HTML/quote.html">Presupuesto</a>
       </div>
     </header>
 
